<?xml version="1.0" encoding="utf-8"?>

<!-- no efforts were made for accessibility -->

<com.example.doordashproject.TouchPassthroughLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="textNoSuggestions"
        android:padding="8dp"
        android:scrollbarSize="0dp"
        android:scrollbars="horizontal"
        android:scrollHorizontally="true"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="textNoSuggestions"
        android:padding="4dp"
        android:scrollbarSize="1dp"
        android:scrollbars="horizontal"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/description"
        android:textColor="@color/cardview_dark_background"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/cover_image"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/middle_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/takeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeTextType="uniform"
        android:background="@color/white"
        android:paddingHorizontal="2dp"
        android:paddingVertical="8dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/takeout"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/phone_number"
        app:layout_constraintEnd_toStartOf="@+id/delivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle_guide" />

    <TextView
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeTextType="uniform"
        android:background="@color/white"
        android:paddingHorizontal="2dp"
        android:paddingVertical="8dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/delivery"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/phone_number"
        app:layout_constraintEnd_toStartOf="@+id/center_guide"
        app:layout_constraintStart_toEndOf="@id/takeout"
        app:layout_constraintTop_toBottomOf="@id/middle_guide" />

    <TextView
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeTextType="uniform"
        android:background="@color/white"
        android:paddingHorizontal="2dp"
        android:paddingVertical="8dp"
        android:text="@string/rating_label"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintEnd_toStartOf="@id/average_rating"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/center_guide"
        app:layout_constraintTop_toBottomOf="@+id/middle_guide" />

    <TextView
        android:id="@+id/average_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:background="@color/white"
        android:paddingHorizontal="2dp"
        android:paddingVertical="8dp"
        android:text="@string/average_rating"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rating_label"
        app:layout_constraintTop_toBottomOf="@+id/middle_guide" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="12dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/average_rating"
        app:layout_constraintBottom_toTopOf="@id/address"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="16dp"
        android:text="@string/full_address"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/bottom_guide"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        tools:layout_editor_absoluteX="8dp" />

    <View style="@style/BottomDivider"/>

    <TextView
        android:id="@+id/get_food_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="2dp"
        android:text="@string/get_food_label"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ready_time"
        app:layout_constraintEnd_toStartOf="@id/center_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_guide"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/ready_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="2dp"
        android:text="@string/no_ready_time"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/closes_in"
        app:layout_constraintEnd_toStartOf="@id/center_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_food_label" />

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="2dp"
        android:text="@string/distance_label"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/center_guide"
        app:layout_constraintTop_toBottomOf="@+id/bottom_guide"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="2dp"
        android:text="@string/no_distance"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/time_to_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/center_guide"
        app:layout_constraintTop_toBottomOf="@+id/distance_label" />

    <TextView
        android:id="@+id/closes_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:padding="4dp"
        android:text="@string/closes_in"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/time_to_close"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/time_to_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:padding="4dp"
        android:text="@string/time_to_close"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/closes_in" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</com.example.doordashproject.TouchPassthroughLayout>